# AlphaD-RL

./: README.md  backend.py  install.sh  level_guesser_trainer.py  main.py  mcts_env.py  pyproject.toml  test.py  utils.py
backend_scripts/: deepseek_backend.py  gpt_backend.py  qwen_backend.py
envs/: level_guesser_env.py
structs/: main.py
test_scripts/: human_eval_test_template.py  test_get_30_tokens.py  test_models.py  test_single_iteration.py  test_student.py
training_scripts/: level_trainer.py
