[project]
name = "alphad-rl"
version = "0.1.0"
description = "Multi-Teacher Monte Carlo Tree Search with Dynamic Weighting and Policy Distillation for Code Generation"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "datasets>=4.5.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
